# skylow

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/commands/: update-top-docs.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/implement-feature/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
crates/baselang/: Cargo.toml
crates/baselang/src/: ast.rs  lib.rs  lower.rs  parse.rs  prelude.skyl  typecheck.rs
crates/baselang/tests/: lower.rs
crates/baselang/tests/lower/: arithmetic.skyl  arithmetic.skyl.expected  comparisons.skyl  comparisons.skyl.expected  local_vars.skyl.expected  multiple_tests.skyl.expected  nested.skyl  nested.skyl.expected  simple.skyl  simple.skyl.expected
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/codegen/src/aarch64/: emit.rs  lower.rs  mod.rs  regalloc.rs
crates/common/: Cargo.toml
crates/common/src/: debug.rs  intern.rs  lib.rs  source.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: driver.rs  lib.rs  runner.rs
crates/compiler/tests/: driver_test.rs  runner.rs
crates/compiler/tests/e2e/: arith.skyl  arith.skyl.expected  local_vars.skyl  local_vars.skyl.expected
crates/debug/: Cargo.toml
crates/debug/src/: arch.rs  breakpoints.rs  commands.rs  inspection.rs  lib.rs  script.rs  session.rs  source_map.rs  stepping.rs  target.rs  types.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: lib.rs  main.rs  repl.rs  script.rs  target.rs
crates/debugger/tests/: debug_test.rs  integration.rs
crates/debugger/tests/debug/: breakpoint_in_function.dbg  breakpoint_in_function.dbg.expected  function_call.dbg  function_call.dbg.expected  function_call.skyl  local_vars.dbg  local_vars.dbg.expected  local_vars.skyl  nested_backtrace.dbg  nested_backtrace.dbg.expected  nested_backtrace.skyl  simple_run.dbg  simple_run.dbg.expected  simple_run.skyl
crates/debuginfo/: Cargo.toml
crates/debuginfo/src/: builder.rs  deserialize.rs  lib.rs  serialize.rs  types.rs
crates/elf/: Cargo.toml
crates/elf/src/: elf64.rs  lib.rs
crates/elf/src/aarch64/: codegen.rs  mod.rs
crates/elf/tests/: compile.rs
crates/elf/tests/compile/: arithmetic.skyl  comparisons.skyl  function_call.skyl  local_vars.skyl  nested_calls.skyl  nested_calls.skyl.expected  simple.skyl
crates/jit/: Cargo.toml
crates/jit/src/: exec.rs  lib.rs
crates/jit/src/aarch64/: codegen.rs  emit.rs  mod.rs
crates/jit/tests/: execute.rs  function_call.rs
crates/jit/tests/execute/: arithmetic.skyl.expected  comparisons.skyl.expected  fail_second.skyl  fail_second.skyl.expected  function_call.skyl  function_call.skyl.expected  multiple.skyl  multiple.skyl.expected  nested.skyl  nested.skyl.expected  simple_fail.skyl  simple_fail.skyl.expected  simple_pass.skyl  simple_pass.skyl.expected
crates/mir/: Cargo.toml
crates/mir/src/: ir.rs  lib.rs  lower.rs
crates/mir/tests/: compile.rs
crates/mir/tests/compile/: all_ops.skyl  all_ops.skyl.expected  arithmetic.skyl  arithmetic.skyl.expected  comparisons.skyl  comparisons.skyl.expected  local_vars.skyl.expected  multiple.skyl  multiple.skyl.expected  simple.skyl  simple.skyl.expected
crates/parser/: Cargo.toml
crates/parser/src/: constants.rs  format.rs  lib.rs  node.rs  parser_interp.rs  parser_trait.rs  syntax.rs  syntaxlang.rs
crates/parser/src/parser_vm/: charset.rs  compiler.rs  grammar.rs  instruction.rs  mod.rs  vm.rs  vmparser.rs
crates/parser/tests/: parse_tree.rs
crates/parser/tests/parse_tree/: alternation.skyh  alternation.skyh.expected  arith.skyh  arith.skyh.expected  arith_indent.skyh  arith_indent.skyh.expected  arith_indent_nested.skyh  arith_indent_nested.skyh.expected  charclass.skyh  charclass.skyh.expected  charset.skyh  charset.skyh.expected  comments.skyh  comments.skyh.expected  custom_category.skyh  custom_category.skyh.expected  error_garbage.skyh  error_garbage.skyh.expected  error_multiline_indent.skyh  error_multiline_indent.skyh.expected  error_parse.skyh  error_parse.skyh.expected  escapes.skyh  escapes.skyh.expected  group_in_multi.skyh  group_in_multi.skyh.expected  group_quantifier.skyh  group_quantifier.skyh.expected  indent_nonlexical.skyh  indent_nonlexical.skyh.expected  indent_ws.skyh  indent_ws.skyh.expected  more_escapes.skyh  more_escapes.skyh.expected  new_category.skyh  new_category.skyh.expected  optional_group.skyh  optional_group.skyh.expected  patterns.skyh  patterns.skyh.expected  (+16 more)
crates/skylow/: Cargo.toml
crates/skylow-cli/: Cargo.toml
crates/skylow-cli/src/: main.rs
crates/skylow/src/: driver.rs  lib.rs  runner.rs
crates/skylow/tests/: driver_test.rs  runner.rs
designs/: language.md  parser-api.md  parsing-vm.md
