[workspace]
members = [
    "crates/common",
    "crates/parser",
    "crates/baselang",
    "crates/mir",
    "crates/codegen",
    "crates/jit",
    "crates/elf",
    "crates/compiler",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bumpalo = { version = "3", features = ["collections", "allocator-api2"] }
hashbrown = { version = "0.15", features = ["allocator-api2"] }
datatest-stable = "0.2"
libc = "0.2"

# Internal crates
common = { path = "crates/common" }
parser = { path = "crates/parser" }
baselang = { path = "crates/baselang" }
mir = { path = "crates/mir" }
codegen = { path = "crates/codegen" }
jit = { path = "crates/jit" }
elf = { path = "crates/elf" }
compiler = { path = "crates/compiler" }
