[package]
name = "compiler"
version.workspace = true
edition.workspace = true

[dependencies]
bumpalo.workspace = true
common.workspace = true
parser.workspace = true
baselang.workspace = true
mir.workspace = true
jit.workspace = true
elf.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[[test]]
name = "runner"
harness = false
