[package]
name = "elf"
version.workspace = true
edition.workspace = true

[dependencies]
mir.workspace = true
codegen.workspace = true
debuginfo.workspace = true

[dev-dependencies]
bumpalo.workspace = true
datatest-stable.workspace = true
baselang.workspace = true

[[test]]
name = "compile"
harness = false
