[package]
name = "skylow-jit"
version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
skylow-mir.workspace = true

[dev-dependencies]
bumpalo.workspace = true
datatest-stable.workspace = true
skylow-baselang.workspace = true

[[test]]
name = "execute"
harness = false
