[package]
name = "skylow"
version.workspace = true
edition.workspace = true

[dependencies]
bumpalo.workspace = true
skylow-common.workspace = true
skylow-parser.workspace = true
skylow-baselang.workspace = true
skylow-mir.workspace = true
skylow-jit.workspace = true
skylow-elf.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[[test]]
name = "runner"
harness = false
